--- a/src/app/ticket/list-admin/list-ticket-admin.component.html
+++ b/src/app/ticket/list-admin/list-ticket-admin.component.html
@@ -2,17 +2,17 @@
   <section class="section">
     <div class="container-fluid mt-5">
       <!-- Table -->
-      <div class="row">
+      <div class="row mt-5">
         <div class="col">
           <div class="card shadow" *ngIf="listProduct.length > 0 ">
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col-10">
-                  <h3 class="mb-0">Products List</h3>
+                  <h3 class="mb-0">Danh sách vé </h3>
                 </div>
                 <div class="col-2 text-right">
                   <button style="font-size: 13px;" type="button" class="btn btn-primary mt-1" (click)="add()">+
-                    Add new product
+                    Thêm vé
                   </button>
                 </div>
               </div>
@@ -21,14 +21,12 @@
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">Produuct ID</th>
-                    <th scope="col">Image</th>
-                    <th scope="col">Product Name</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Piece</th>
-                    <th scope="col">Avvaiable Color</th>
-                    <th scope="col">Action</th>
+                    <th scope="col">Mã vé</th>
+                    <th scope="col">Tên vé</th>
+                    <th scope="col">Giá</th>
+                    <th scope="col">Người tạo</th>
+                    <th scope="col">Trạng thái</th>
+                    <th scope="col">Tác vụ</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -36,27 +34,23 @@
                     <th scope="row">
                       <div class="media align-items-center">
                         <div class="media-body">
-                          <span class="mb-0 text-sm">{{product.productId}}</span>
+                          <span class="mb-0 text-sm">{{product.code}}</span>
                         </div>
                       </div>
                     </th>
-                    <td>
-                      {{product.imageUrl}}
-                    </td>
+                    
                     <td>
                       {{product.name}}
                     </td>
-                    <td>
-                      {{product.category}}
-                    </td>
+                 
                     <td>
                       {{product.price}}
                     </td>
                     <td>
-                      {{product.piece}}
+                      {{product.createdBy}}
                     </td>
                     <td>
-                      {{product.avaialeColor}}
+                      {{product.status}}
                     </td>
                     <td class="text-center">
                       <div class="button-action">
