--- a/src/app/product/list/list-product.component.html
+++ b/src/app/product/list/list-product.component.html
@@ -30,7 +30,7 @@
                 </thead>
                 <tbody *ngIf="listProduct">
                   <tr *ngFor="let product of listProduct">
-                    <td>
+                    <td class="product-image">
                       <img [src]="product.imagePath" alt="Product Image">
                     </td>
                     <td>
