--- a/src/app/product/edit/edit-product.component.html
+++ b/src/app/product/edit/edit-product.component.html
@@ -14,7 +14,7 @@
                 <div class="card shadow shadow-lg--hover">
                   <div class="card-body">
                     <div class="image-section mb-3 text-center">
-                      <img [src]="'http://localhost:8089' + imgPath" alt="Product Image">
+                      <img [src]="imgPath" alt="Product Image">
 
                     </div>
                     <div class="text-section">
@@ -32,7 +32,7 @@
                         <p>Category: </p>
                         <select [(ngModel)]="selectedCategory" id="category" style="padding-left: 1rem;"
                           aria-describedby="productType-help" [disabled]="this.roleNumber != '1'" title="Loại sản phẩm">
-                          <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+                          <option *ngFor="let category of categories" [selected]="product_category == category.name" [value]="category.id">{{ category.name }}</option>
                         </select>
                       </div>
                       <div class="input-group">
