--- a/src/app/product/list-customer/list.component.html
+++ b/src/app/product/list-customer/list.component.html
@@ -39,7 +39,7 @@
               <div class="products-container">
                 <div class="product-row" *ngFor="let row of productsByRow">
                   <div class="product-card" *ngFor="let product of row" (click)="handleCardClick(product.code)">
-                    <img class="card-image" [src]="'http://localhost:8089' + product.imagePath">
+                    <img class="card-image" [src]="product.imagePath">
                     <div class="product-meta">{{product.name}}</div>
                     <div class="product-meta price">{{product.price}}đ</div>
                   </div>
