--- a/src/app/product/list/list-product.component.scss
+++ b/src/app/product/list/list-product.component.scss
@@ -197,3 +197,14 @@
 .button:hover {
 cursor: pointer;
 }
+
+.product-image {
+    max-width: 10rem;
+    max-height: 10rem;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
