--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       aria-controls="sidenav-collapse-main">
     </button>
     <!-- Brand -->
-    <a class="" style="margin-left: 2rem;" routerLinkActive="active" [routerLink]="['/dashboard']">
+    <a class="" style="margin-left: 2rem;" routerLinkActive="active" [routerLink]="['/admin/dashboard']">
       <img src="assets/img/Logo.png" class="" style="width: 100px; height: 100px;" alt=" ...">
     </a>
     <!-- User -->
