--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,9 +2,9 @@
 <nav *ngIf="managerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
-    <a class="h4 mb-0 text-uppercase d-none d-lg-inline-block">{{getTitle()}}</a>
+    <a class="h4 mb-0 text-uppercase d-none d-lg-inline-block"></a>
     <!-- Form -->
-    <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
+    <!-- <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
       <div class="form-group mb-0" [ngClass]="{ 'focused': focus === true }">
         <div class="input-group input-group-alternative">
           <div class="input-group-prepend">
@@ -13,7 +13,7 @@
           <input class="form-control" placeholder="Search" type="text" (focus)="focus = true" (blur)="focus = false">
         </div>
       </div>
-    </form>
+    </form> -->
     <!-- User -->
     <ul class="navbar-nav align-items-center d-none d-md-flex">
       <li class="nav-item" ngbDropdown placement="bottom-right">
