--- a/src/app/product/detail/product-detail.component.html
+++ b/src/app/product/detail/product-detail.component.html
@@ -8,93 +8,63 @@
           <div class="mt-3">
             <div class="row">
               <div class="col-lg-12 mb-12">
-                <div class="card shadow shadow-lg--hover">
-                  <div class="card-body">
-                    <div class="image-section mb-3 text-center">
-                      <img [src]="imgPath" alt="Product Image">
-
+                <div class="card-body">
+                  <div class="image-section mb-3 text-center">
+                    <img *ngIf="productByCode && productByCode.imagePath" [src]="productByCode.imagePath" alt="Product" class="image-product">
+                    <p class="status-product">{{productByCode.status}}</p>
+                  </div>
+                  <div class="text-section" style="margin-right: 28px;">
+                    <h4>{{productByCode.name}}</h4>
+                    <div class="d-flex align-items-center content-view">
+                      <label>Danh mục: {{productByCode.category}}</label>
+                      <label>Nhà cung cấp: {{productByCode.supplier}}</label>
+                      <label>Đang còn: {{productByCode.stockQuantity}}</label>
                     </div>
-                    <div class="text-section">
-                      <div class="input-group">
-                        <p>Product Name:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class=" product_" id="product_name" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [(ngModel)]="product_name" [disabled]="this.roleNumber != '1'">
-                        </div>
-
-                      </div>
-                      <div class="input-group">
-                        <p>Category: </p>
-                        <select [(ngModel)]="selectedCategory" id="category" style="padding-left: 1rem;"
-                          aria-describedby="productType-help" [disabled]="this.roleNumber != '1'" title="Loại sản phẩm">
-                          <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
-                        </select>
-                      </div>
-                      <div class="input-group">
-                        <p>Nhà cung cấp: </p>
-                        <select [(ngModel)]="selectedSupplier" id="suppliers" style="padding-left: 1rem;"
-                          aria-describedby="productType-help" [disabled]="this.roleNumber != '1'" title="Nhà cung cấp">
-                          <option *ngFor="let supplier of suppliers" [value]="supplier.id">{{ supplier.name }}</option>
-                        </select>
-                      </div>
-                      <div class="input-group">
-                        <p>Trung tâm: </p>
-                        <select [(ngModel)]="selectedFacility" id="selectedFacility" style="padding-left: 1rem;"
-                          aria-describedby="productType-help" title="Cơ sở" (change)="onFacilityChange($event.target.value)">
-                          <option *ngFor="let facility of facilities" [value]="facility.id" [selected]="facility.id === facilities[0].id" >{{ facility.name }}</option>
-                        </select>
-                      </div>
-                      <div class="input-group">
-                        <p>Giá:</p>
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="product_price"
-                            type="number" min="0" aria-describedby="account-help" maxlength="50" [(ngModel)]="product_price">
-                        </div>
-                      </div>
-
-                      <div class="input-group">
-                        <p>Số lượng:</p>
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="quantity"
-                            type="number" aria-describedby="account-help" min="0" [(ngModel)]="quantity">
-                        </div>
-                      </div>
-
-                      <div class="input-group">
-                        <p>Trạng thái: </p>
-                        <select [(ngModel)]="status" id="status" style="padding-left: 1rem;"
-                          aria-describedby="productType-help" title="Trạng thái">
-                          <option *ngFor="let currentStatus of statuses" [value]="currentStatus.text" [selected]="currentStatus.text == status" >{{ currentStatus.text }}</option>
-                        </select>
-                      </div>
-
-                      <div class="note-section input-group">
-                        <p>Mô tả: </p>
-                        <textarea style="width: 100%;" [(ngModel)]="description" rows="4" [disabled]="this.roleNumber != '1'"
-                          placeholder="Mô tả"></textarea>
-                      </div>
-                      <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: center;">
-                        <button type="button" class="btn btn-color-1" (click)="save()">Save Product</button>
-                        <button type="button" class="btn btn-color-2" (click)="reset()">Reset</button>
-                      </div>
+                   
+                    <div class="form-group">
+                      <label for="facility">Cơ sở</label>
+                      <select class="form-control" name="facility" id="facility" (change)="onFacilityChange($event.target.value)">
+                        <option *ngFor="let facility of facilities" [value]="facility.id" [selected]="facility.id === facilities[0].id" >{{ facility.name }}</option>
+                      </select>
                     </div>
+                    <div class="form-group">
+                      <label for="quantity-buy">Số lượng mua</label>
+                      <input type="number"
+                        class="form-control" name="" min="1" [(ngModel)]="quantity" [value]="1" id="quantity-buy" aria-describedby="helpId" placeholder="">
+                        <div class="regexTel">
+                          <ng-container *ngIf="!quantity || +quantity <= 0">
+                              <p class="text-danger" style="font-size: 13px;">Số lượng không hợp lệ</p>
+                          </ng-container>
+                        </div>
+                      </div>
+                    <div class="form-group d-flex justify-content-between" style=" align-items: baseline;">
+                      <p class="price-product">{{productByCode.price | currency:'VND':'symbol':null:'vi-VN'}}</p>
+                      <button class="btn btn-primary" type="button" (click)="handleAddToCart()">Thêm vào giỏ hàng</button>
+                    </div>
+  
+                    <!-- <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: center;">
+                      <button type="button" class="btn btn-color-1" (click)="save()">Save Product</button>
+                      <button type="button" class="btn btn-color-2" (click)="reset()">Reset</button>
+                    </div> -->
                   </div>
                 </div>
+                
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="description-product">
+        <p style="margin-bottom: 0; font-weight: 600;">{{!productByCode.description || productByCode.description== '' ? 'Chưa cập nhật mô tả sản phẩm.' : productByCode.description}}</p>
+      </div>
     </div>
     <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
+    <!-- <div class="separator separator-bottom separator-skew zindex-100">
       <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
         xmlns="http://www.w3.org/2000/svg">
         <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
       </svg>
-    </div>
+    </div> -->
   </section>
 
   <!-- <div class="elfsight-app-2bb20d90-b4b8-4f52-b90a-a2fc00eac7d1" data-elfsight-app-lazy></div> -->
