--- a/src/app/facility/facility-view/facility-view.component.html
+++ b/src/app/facility/facility-view/facility-view.component.html
@@ -8,7 +8,7 @@
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col-10">
-                  <h3 class="mb-0">Danh sách vé </h3>
+                  <h3 class="mb-0">Danh sách Cơ sở</h3>
                 </div>
               </div>  
               <div class="col-12 text-right d-flex align-items-center justify-content-between pl-0" >
@@ -16,7 +16,7 @@
                   
                 </div>
                 <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
-                  Thêm vé
+                  Thêm cơ sở
                 </button>
               </div>
             </div>
@@ -56,7 +56,7 @@
                     <td class="text-center">
                      <div class="button-action">
                         <div>
-                          <button class="btn btn-primary mr-2" aria-label="Delete" (click)="delete(ticket.productId)">
+                          <button class="btn btn-primary mr-2" aria-label="Delete" (click)="delete(u.productId)">
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
                         </div>
