--- a/src/app/product/list/list-product.component.html
+++ b/src/app/product/list/list-product.component.html
@@ -4,14 +4,21 @@
       <!-- Table -->
       <div class="row">
         <div class="col">
-          <div class="card shadow" *ngIf="listProduct">
+          <div class="card shadow" *ngIf="products">
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col-10">
                   <h3 class="mb-0">Danh sách sản phẩm</h3>
                 </div>
-                <div class="col-2 text-right">
-                  <button style="font-size: 13px;" type="button" class="btn btn-primary mt-1" (click)="add()">+
+                <div class="col-12 text-right d-flex align-items-center justify-content-between pl-0" >
+                  <div class="form-group mb-0">
+                    <select class="form-control" name="" id="" (change)="handleSelectFacility($event)">
+                      <option *ngFor="let facility of facilities" [value]="facility.id" [selected]="facility.id == +facilitySelect">
+                        {{facility.name}}
+                      </option>
+                    </select>
+                  </div>
+                  <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
                     Thêm sản phẩm
                   </button>
                 </div>
@@ -21,27 +28,23 @@
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
-                    <th scope="col">Ảnh</th>
-                    <th scope="col">Tên sản phẩm</th>
-                    <th scope="col">Thể loại</th>
-                    <th scope="col">Giá</th>
-                    <th scope="col">Action</th>
+                    <th class="text-center" scope="col">Ảnh</th>
+                    <th class="text-center" scope="col">Tên sản phẩm</th>
+                    <th class="text-center" scope="col">Thể loại</th>
+                    <th class="text-center" scope="col">Giá</th>
+                    <th class="text-center" scope="col">Trạng thái</th>
+                    <th class="text-center" scope="col">Tác vụ</th>
                   </tr>
                 </thead>
-                <tbody *ngIf="listProduct">
-                  <tr *ngFor="let product of listProduct">
-                    <td class="product-image">
+                <tbody *ngIf="products">
+                  <tr *ngFor="let product of products">
+                    <td class="product-image text-center">
                       <img [src]="product.imagePath" alt="Product Image">
                     </td>
-                    <td>
-                      {{product.name}}
-                    </td>
-                    <td>
-                      {{product.category}}
-                    </td>
-                    <td>
-                      {{product.price}}
-                    </td>
+                    <td>{{product.name}}</td>
+                    <td class="text-center">{{product.category}}</td>
+                    <td class="text-center">{{product.price}}</td>
+                    <td class="text-center">{{product.status}}</td>
                     <td class="text-center">
                       <div class="button-action">
                         <div>
