--- a/src/app/account/list/list-account.component.html
+++ b/src/app/account/list/list-account.component.html
@@ -69,6 +69,11 @@
                           </button>
                         </div>
                         <div>
+                          <button class="btn btn-warning mr-2" aria-label="Reset Password" (click)="resetPassword(u.username)">
+                            <i class="fa-solid fa-key"></i>
+                          </button>
+                        </div>
+                        <div>
                           <button class="btn btn-danger" aria-label="Edit" (click)="edit(ticket.productId)">
                             <i class="fa-solid fa-trash-can"></i>
                           </button>
