--- a/src/app/product/create/create-product.component.html
+++ b/src/app/product/create/create-product.component.html
@@ -2,66 +2,73 @@
 
 
   <section class="section">
-    <div class="container-product">
+    <div class="px-5">
       <div class="row row-grid align-items-center">
         <div class="col px-0">
-          <div class="d-flex mt-3">
-            <h5 class="display-3">Create Product </h5>
-          </div>
-          <div class="mt-3">
+          
+          <div class="mt-3 mb-3">
             <div class="row">
-              <div class="col-lg-12 mb-12">
+              <div class="col-12 create-sticket">
                 <div class="card shadow shadow-lg--hover">
-                  <div class="card-body">
-                    <!-- Phần ảnh -->
-                    <div class="image-section mb-3 text-center">
-                      <!-- Đặt hình ảnh ở đây -->
-                      <img class="imageProduct" alt="" src="assets/img/image.png">
-
-                    </div>
-                    <!-- Phần text -->
-                    <div class="text-section">
-                      <div class="input-group">
-                        <p>Product Name:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input class="product_" id="product_name" placeholder="Product A" type="text"
-                            aria-describedby="account-help" maxlength="50" [(ngModel)]="product_name"
-                            style="width: 100%;">
-                          <p style="width: 90%;" class="error" *ngIf="nameNull">Vui lòng ko để trống thông tin tên</p>
-                        </div>
-
+                  <div class="d-flex justify-content-center">
+                    <h5 class="display-3">Thêm sản phẩm </h5>
+                  </div>
+                  <div class="card-body" [formGroup]="productForm">
+                    <div class="form-group">
+                      <label for="">*Tên sản phẩm</label>
+                      <input type="text" id="" class="form-control"  [formControlName]="'name'" placeholder="Tên của vé" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(productForm,'name')">
+                            <p class="text-danger"> Nhập tên sản phẩm</p>
+                        </ng-container>
                       </div>
-                      <div class="input-group">
-                        <p>Brand: </p>
-                        <select [(ngModel)]="selectedType" id="productType" aria-describedby="productType-help"
-                          title="Loại hình nhà">
-                          <option *ngFor="let type of productTypes" [value]="type">{{ type }}</option>
+                    </div>  
+                    <div class="form-group">
+                      <label for="">Link ảnh</label>
+                      <input type="text" id="" [formControlName]="'imagePath'" class="form-control" placeholder="Link ảnh" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(productForm,'monthDuration')">
+                            <p class="text-danger">Chọn thể loại</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Thể loại</label>
+                        <select class="form-control" [formControlName]="'categoryId'" name="" id="">
+                          <option *ngFor="let c of categories" [value]="c.id">
+                            {{c.name}}
+                          </option>
                         </select>
-                      </div>
-                      <div class="input-group">
-                        <p>Price:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input class="product_" id="product_price" placeholder="Product A" type="text"
-                            aria-describedby="account-help" maxlength="50" [(ngModel)]="product_price">
-                          <p style="width: 90%;" class="error" *ngIf="priceNull">Vui lòng ko để trống thông tin giá tiền
-                          </p>
+                        <div class="regexTel">
+                          <ng-container *ngIf="validateForm(productForm,'categoryId')">
+                              <p class="text-danger">Chọn thể loại</p>
+                          </ng-container>
                         </div>
-
-                      </div>
-                      <div class="note-section input-group">
-                        <p>Description: </p>
-                        <textarea style="width: 100%;" [(ngModel)]="note" rows="4"
-                          placeholder="Description of product"></textarea>
-                      </div>
-                      <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: center;">
-                        <button type="button" class="btn btn-color-1" (click)="save()">Save Product</button>
-                        <button type="button" class="btn btn-color-2" (click)="cancel()">Cancel</button>
-                      </div>
                     </div>
+                    <div class="form-group">
+                      <label for="">*Nhà cung cấp</label>
+                        <select class="form-control" [formControlName]="'supplierId'" name="" id="">
+                          <option *ngFor="let s of suppliers" [value]="s.id">
+                            {{s.name}}
+                          </option>
+                        </select>
+                        <div class="regexTel">
+                          <ng-container *ngIf="validateForm(productForm,'supplierId')">
+                              <p class="text-danger">Chọn nhà cung cấp</p>
+                          </ng-container>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">Mô tả</label>
+                      <input type="text" name="" id="" class="form-control" [formControlName]="'description'" placeholder="Mô tả sản phẩm" aria-describedby="helpId">
+                    </div> 
+
+                    <!-- Phần text -->
+                    
+                  </div>
+                  <div class="card-footer">
+                    <button class="btn btn-primary" (click)="saveForm()">Lưu</button>
+                    <button class="btn btn-outline" (click)="location.back()">Quay lại</button>
                   </div>
                 </div>
               </div>
@@ -71,12 +78,12 @@
       </div>
     </div>
     <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
+    <!-- <div class="separator separator-bottom separator-skew zindex-100">
       <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
         xmlns="http://www.w3.org/2000/svg">
         <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
       </svg>
-    </div>
+    </div> -->
   </section>
 
   <!-- <div class="elfsight-app-2bb20d90-b4b8-4f52-b90a-a2fc00eac7d1" data-elfsight-app-lazy></div> -->
