--- a/src/app/product/update/update-product.component.scss
+++ b/src/app/product/update/update-product.component.scss
@@ -130,7 +130,7 @@
     }
 }
 
-#product_name, #productType, #product_price{
+#ticket_name, #productType, #ticket_price{
     width: 100%;
     height: 35px;
 }
@@ -172,3 +172,17 @@
 .mt-1{
     margin-top: 1rem !important;
 }
+
+.card-footer {
+    display: flex;
+    justify-content: end;
+    gap: 5px;
+}
+.ticket_input {
+        width: 100%; /* Ensure the container takes up the full width */
+    }
+
+    .ticket_ {
+        width: 100%; /* Make the input take up the full width of the container */
+        box-sizing: border-box; /* Include padding and border in the width calculation */
+    }
