--- a/src/app/product/list/list-product.component.html
+++ b/src/app/product/list/list-product.component.html
@@ -52,7 +52,7 @@
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
                         </div>
-                        <div>
+                        <div *ngIf="roleId === 1">
                           <button *ngIf="product.status !== 'Vô hiệu hóa'" class="btn btn-danger" aria-label="Delete" (click)="delete(product.productId)">
                             <i class="fa-solid fa-trash-can"></i>
                           </button>
