--- a/src/app/facility/facility-view/facility-view.component.html
+++ b/src/app/facility/facility-view/facility-view.component.html
@@ -15,9 +15,9 @@
                 <div class="form-group mb-0">
                   
                 </div>
-                <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
+                <!-- <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
                   Thêm cơ sở
-                </button>
+                </button> -->
               </div>
             </div>
             <div class="table-responsive" style="min-height: 300px;">
@@ -54,7 +54,7 @@
                       {{f.workEndTime}}
                     </td>
                     <td class="text-center">
-                     <div class="button-action">
+                     <!-- <div class="button-action">
                         <div>
                           <button class="btn btn-primary mr-2" aria-label="Delete" (click)="delete(u.productId)">
                             <i class="fa-solid fa-pen-to-square"></i>
@@ -65,7 +65,7 @@
                             <i class="fa-solid fa-trash-can"></i>
                           </button>
                         </div>
-                      </div>
+                      </div> -->
                     </td>
                   </tr>
                 </tbody>
