--- a/src/app/account/create/create-account.component.html
+++ b/src/app/account/create/create-account.component.html
@@ -25,10 +25,31 @@
                     </div>  
                     <div class="form-group">
                       <label for="">*Tên đăng nhập</label>
-                      <input type="number" id="" [formControlName]="'username'" class="form-control" placeholder="Tên đăng nhập" aria-describedby="helpId">
+                      <input type="text" id="" [formControlName]="'username'" class="form-control" placeholder="Tên đăng nhập" aria-describedby="helpId">
                       <div class="regexTel">
                         <ng-container *ngIf="validateForm(userForm,'username')">
                             <p class="text-danger"> Nhập tên đăng nhập</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Giới tính</label><br>
+                      <input type="radio" id="maleRadio" value="true" [formControlName]="'gender'" aria-describedby="helpId">
+                      <label class="form-check-label" for="maleRadio">Nam</label>
+                      <input type="radio" id="femaleRdio" value="false" [formControlName]="'gender'" aria-describedby="helpId">
+                      <label class="form-check-label" for="femaleRdio">Nữ</label>
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'phoneNumber')">
+                            <p class="text-danger">Chọn giới tính</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Ngày sinh</label>
+                      <input type="date" [formControlName]="'dob'" id="" class="form-control" placeholder="Nhập ngày sinh" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'dob')">
+                            <p class="text-danger">Nhập ngày sinh</p>
                         </ng-container>
                       </div>
                     </div>
@@ -37,13 +58,13 @@
                       <input type="text" [formControlName]="'email'" id="" class="form-control" placeholder="Nhập email" aria-describedby="helpId">
                       <div class="regexTel">
                         <ng-container *ngIf="validateForm(userForm,'email')">
-                            <p class="text-danger">Nhập vào giá vé</p>
+                            <p class="text-danger">Nhập email</p>
                         </ng-container>
                       </div>
                     </div> 
                     <div class="form-group">
                       <label for="">*Mật khẩu</label>
-                      <input type="text" [formControlName]="'password'" id="" class="form-control" placeholder="Nhập mật khẩu" aria-describedby="helpId">
+                      <input type="password" [formControlName]="'password'" id="" class="form-control" placeholder="Nhập mật khẩu" aria-describedby="helpId">
                       <div class="regexTel">
                         <ng-container *ngIf="validateForm(userForm,'password')">
                             <p class="text-danger">Nhập mật khẩu</p>
@@ -60,20 +81,11 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label for="">*Giới tính</label>
-                      <input type="text" [formControlName]="'gender'" id="" class="form-control" placeholder="Nhập số điện thoại" aria-describedby="helpId">
+                      <label for="">*Địa chỉ</label>
+                      <input type="text" [formControlName]="'address'" id="" class="form-control" placeholder="Nhập địa chỉ" aria-describedby="helpId">
                       <div class="regexTel">
-                        <ng-container *ngIf="validateForm(userForm,'phoneNumber')">
-                            <p class="text-danger">Chọn giới tính</p>
-                        </ng-container>
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label for="">*Ngày sinh</label>
-                      <input type="date" [formControlName]="'dob'" id="" class="form-control" placeholder="Nhập ngày sinh" aria-describedby="helpId">
-                      <div class="regexTel">
-                        <ng-container *ngIf="validateForm(userForm,'dob')">
-                            <p class="text-danger">Nhập ngày sinh</p>
+                        <ng-container *ngIf="validateForm(userForm,'address')">
+                            <p class="text-danger">Nhập địa chỉ</p>
                         </ng-container>
                       </div>
                     </div>
@@ -94,6 +106,8 @@
                       <label for="">*Quyền</label>
                         <select class="form-control" [formControlName]="'roleId'" name="" id="">
                           <option [value]="2">Quản lý</option>
+                          <option [value]="4">Lễ tân</option>
+                          <option [value]="5">Huấn luyện viên</option>
                         </select>
                         <div class="regexTel">
                           <ng-container *ngIf="validateForm(userForm,'roleId')">
