auth and footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -57,7 +57,7 @@
 </footer>
 
 <footer *ngIf="!footerUser" class="footer" style="padding: 1rem 0 !important">
-  <div class="row align-items-center justify-content-xl-between">
+  <div class="row align-items-center justify-content-xl-between m-0">
     <div class="col-xl-4">
       <div class="copyright text-center text-xl-left text-muted" style="padding-left: 5rem;">
         <img class="icon-logo" src="assets/img/Logo.png" alt="">
