--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- NAVBAR - ADMIN / Quản lý -->
-<nav *ngIf="managerNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+<nav *ngIf="account" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-uppercase d-none d-lg-inline-block"></a>
@@ -20,16 +20,14 @@
         <a class="nav-link pr-0" role="button" ngbDropdownToggle>
           <div class="media align-items-center">
             <span class="avatar avatar-sm rounded-circle">
-              <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
+              <img alt="Image placeholder" src="assets/img/avatar-no.png">
             </span>
-            <div class="media-body ml-2 d-none d-lg-block">
-              <span class="mb-0 text-sm  font-weight-bold">{{username}}</span>
-            </div>
+            
           </div>
         </a>
-        <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
+        <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu style="inset: revert-layer;">
           <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0">Welcome!</h6>
+            <h6 class="text-overflow m-0">{{account.username}}</h6>
           </div>
           <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
