--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -82,7 +82,9 @@
 {
     border-color: rgba(0, 0, 0, .9);
 }
-
+.avatar {
+    cursor: pointer;
+}
 @media (min-width: 768px)
 {
     .navbar .dropdown-menu
