--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="shouldShowNav" class="nav-container">
+<div class="nav-container">
   <a class="navbar-brand" [routerLink]="['/home']">
     <img alt="" src="./assets/img/brand/fitnesshappy.png">
   </a>
@@ -10,9 +10,41 @@
     <a [routerLink]="['/ticket']" class="nav-item">Vé</a>
     <a [routerLink]="['/about']" class="nav-item">Về chúng tôi</a>
   </div>
+  <ul class="navbar-nav align-items-center d-none d-md-flex"  *ngIf="roleNumber">
+    <li class="nav-item" ngbDropdown placement="bottom-right">
+      <a class="nav-link pr-0" role="button" ngbDropdownToggle>
+        <div class="media align-items-center">
+          <span class="avatar avatar-sm rounded-circle">
+            <img alt="Image placeholder" src="assets/img/avatar-no.png">
+          </span>
+          
+        </div>
+      </a>
+      <div class="dropdown-menu-arrow dropdown-menu-right"  ngbDropdownMenu style="top: 70px; right: 11px;">
+        <div class=" dropdown-header noti-title">
+          <h6 class="text-overflow m-0">{{userName}}</h6>
+        </div>
+        <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
+          <i class="ni ni-single-02"></i>
+          <span>Xem thông tin</span>
+        </a>
+        <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
+          <i class="fas fa-lock"></i>
+          <span>Đổi mật khẩu</span>
+        </a>
+        <a routerLinkActive="active" [routerLink]="['/support']" class="dropdown-item">
+          <i class="ni ni-support-16"></i>
+          <span>Liên hệ & Hỗ trợ</span>
+        </a>
+        <div class="dropdown-divider"></div>
+        <a (click)="handleLogout()" class="dropdown-item">
+          <i class="ni ni-user-run"></i>
+          <span>Đăng xuất</span>
+        </a>
+      </div>
+    </li>
+  </ul>
   <div class="user-info">
-    <div *ngIf="roleNumber">{{userName}}</div>
     <a *ngIf="!roleNumber" [routerLink]="['/login']" style="margin-left: 1rem; margin-right: 0.5rem;">Đăng nhập</a>
-    <div *ngIf="roleNumber" [routerLink]="['/login']" (click)="handleLogout()" style="margin-left: 1rem; margin-right: 0.5rem;">Đăng xuất</div>
   </div>
-</div>
+</div>  
