--- a/src/app/account/list/list-account.component.html
+++ b/src/app/account/list/list-account.component.html
@@ -64,7 +64,7 @@
                     <td class="text-center">
                      <div class="button-action">
                         <div>
-                          <button class="btn btn-primary mr-2" aria-label="Delete" (click)="delete(u.productId)">
+                          <button class="btn btn-primary mr-2" aria-label="Update" (click)="update(u.username)">
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
                         </div>
