--- a/src/app/account/edit/edit-account.component.html
+++ b/src/app/account/edit/edit-account.component.html
@@ -2,126 +2,133 @@
 
 
   <section class="section">
-    <div class="container-product">
+    <div class="px-5">
       <div class="row row-grid align-items-center">
         <div class="col px-0">
-          <div class="d-flex mt-3">
-            <h5 class="display-3">Edit Account </h5>
-          </div>
-          <div class="mt-3">
-            <div class="card shadow shadow-lg--hover">
-              <div class="card-body">
-                <div class="row">
-
-                  <div class="image-section mb-3 text-center" style="width: 100%;">
-                    <!-- Đặt hình ảnh ở đây -->
-                    <img class="imageProduct" alt="" src="assets/img/image 8.png">
-
+          
+          <div class="mt-3 mb-3">
+            <div class="row">
+              <div class="col-12 create-sticket">
+                <div class="card shadow shadow-lg--hover">
+                  <div class="d-flex justify-content-center">
+                    <h5 class="display-3">Thêm tài khoản</h5>
                   </div>
-                  <div class="col-lg-6 mb-6 pd-12">
-
-                    <!-- Phần ảnh -->
-
-                    <!-- Phần text -->
-                    <div class="text-section">
-                      <div class="input-group">
-                        <p>First Name:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class=" product_" id="product_name" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_name">
-                          <p style="width: 90%;" class="error" *ngIf="nameNull">Vui lòng ko để trống thông tin tên</p>
-                        </div>
-
+                  <div class="card-body" [formGroup]="userForm">
+                    <div class="form-group">
+                      <label for="">*Họ tên</label>
+                      <input type="text" id="" class="form-control"  [formControlName]="'fullName'" placeholder="Họ tên" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'fullName')">
+                            <p class="text-danger"> Nhập họ tên</p>
+                        </ng-container>
                       </div>
-
-                      <div class="input-group">
-                        <p>Last Name:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="product_price" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_price">
-                          <p style="width: 90%;" class="error" *ngIf="false">
-                          </p>
-                        </div>
-
-                      </div>
-                      <div class="input-group">
-                        <p>Date of Birth:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="product_price" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_price">
-                          <p style="width: 90%;" class="error" *ngIf="false">Vui lòng ko để trống thông tin giá tiền
-                          </p>
-                        </div>
-
-                      </div>
-                      <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: end;">
-                        <button type="button" class="btn btn-color-1" (click)="save()">Save Product</button>
+                    </div>  
+                    <div class="form-group">
+                      <label for="">*Tên đăng nhập</label>
+                      <input type="text" id="" [formControlName]="'username'" class="form-control" placeholder="Tên đăng nhập" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'username')">
+                            <p class="text-danger"> Nhập tên đăng nhập</p>
+                        </ng-container>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-lg-6 mb-6">
-                    <!-- Phần text -->
-                    <div class="text-section">
-                      <div class="input-group">
-                        <p>Password:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class=" product_" id="product_name" placeholder="Product A"
-                            type="password" aria-describedby="account-help" maxlength="50" [value]="product_name">
-                          <p style="width: 90%;" class="error" *ngIf="nameNull">Vui lòng ko để trống thông tin tên</p>
-                        </div>
-
+                    <div class="form-group">
+                      <label for="">*Giới tính</label><br>
+                      <input type="radio" id="maleRadio" value="true" [formControlName]="'gender'" aria-describedby="helpId">
+                      <label class="form-check-label" for="maleRadio">Nam</label>
+                      <input type="radio" id="femaleRdio" value="false" [formControlName]="'gender'" aria-describedby="helpId">
+                      <label class="form-check-label" for="femaleRdio">Nữ</label>
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'phoneNumber')">
+                            <p class="text-danger">Chọn giới tính</p>
+                        </ng-container>
                       </div>
-
-                      <div class="input-group">
-                        <p>Phone Number:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="product_price" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_price">
-                          <p style="width: 90%;" class="error" *ngIf="priceNull">Vui lòng ko để trống thông tin giá tiền
-                          </p>
-                        </div>
-
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Ngày sinh</label>
+                      <input type="date" [formControlName]="'dob'" id="" class="form-control" placeholder="Nhập ngày sinh" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'dob')">
+                            <p class="text-danger">Nhập ngày sinh</p>
+                        </ng-container>
                       </div>
-                      <div class="input-group">
-                        <p>Gender: </p>
-                        <select [(ngModel)]="selectedType" id="genderType" style="padding-left: 1rem;"
-                          aria-describedby="genderType-help" title="Loại hình nhà">
-                          <option *ngFor="let type of genderTypes" [value]="type">{{ type }}</option>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Email</label>
+                      <input type="text" [formControlName]="'email'" id="" class="form-control" placeholder="Nhập email" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'email')">
+                            <p class="text-danger">Nhập email</p>
+                        </ng-container>
+                      </div>
+                    </div> 
+                    <div class="form-group">
+                      <label for="">*Mật khẩu</label>
+                      <input type="password" [formControlName]="'password'" id="" class="form-control" placeholder="Nhập mật khẩu" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'password')">
+                            <p class="text-danger">Nhập mật khẩu</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Số điện thoại</label>
+                      <input type="text" [formControlName]="'phoneNumber'" id="" class="form-control" placeholder="Nhập số điện thoại" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'phoneNumber')">
+                            <p class="text-danger">Nhập số điện thoại</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Địa chỉ</label>
+                      <input type="text" [formControlName]="'address'" id="" class="form-control" placeholder="Nhập địa chỉ" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(userForm,'address')">
+                            <p class="text-danger">Nhập địa chỉ</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Cơ sở</label>
+                        <select class="form-control" [formControlName]="'facilityId'" name="" id="">
+                          <option *ngFor="let facility of facilities" [value]="facility.id">
+                            {{facility.name}}
+                          </option>
                         </select>
-                      </div>
+                        <div class="regexTel">
+                          <ng-container *ngIf="validateForm(userForm,'facilityId')">
+                              <p class="text-danger">Chọn cơ sở</p>
+                          </ng-container>
+                        </div>
+                    </div> 
+                    <div class="form-group">
+                      <label for="">*Quyền</label>
+                        <select class="form-control" [formControlName]="'roleId'" name="" id="">
+                          <option [value]="2">Quản lý</option>
+                          <option [value]="4">Lễ tân</option>
+                          <option [value]="5">Huấn luyện viên</option>
+                        </select>
+                        <div class="regexTel">
+                          <ng-container *ngIf="validateForm(userForm,'roleId')">
+                              <p class="text-danger">Chọn quyền</p>
+                          </ng-container>
+                        </div>
+                    </div> 
 
-                      <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: start;">
-                        <button type="button" class="btn btn-color-2" (click)="cancel()">Cancel</button>
-                      </div>
-                    </div>
+                    <!-- Phần text -->
+                    
+                  </div>
+                  <div class="card-footer">
+                    <button class="btn btn-primary" (click)="saveForm()">Lưu</button>
+                    <button class="btn btn-outline" (click)="location.back()">Quay lại</button>
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-        xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
-    </div>
   </section>
-
-  <!-- <div class="elfsight-app-2bb20d90-b4b8-4f52-b90a-a2fc00eac7d1" data-elfsight-app-lazy></div> -->
-
 </main>
