--- a/src/app/account/list/list-account.component.html
+++ b/src/app/account/list/list-account.component.html
@@ -63,11 +63,11 @@
                     <td>{{u.facility}}</td>
                     <td class="text-center">
                      <div class="button-action">
-                        <div>
+                        <!-- <div>
                           <button class="btn btn-primary mr-2" aria-label="Update" (click)="update(u.username)">
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
-                        </div>
+                        </div> -->
                         <div>
                           <button class="btn btn-warning mr-2" aria-label="Reset Password" (click)="resetPassword(u.username)">
                             <i class="fa-solid fa-key"></i>
